# screener-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  script.sh
src/screener_mcp/: __init__.py  auth.py  client.py  server.py  test.py
src/screener_mcp/parsers/: company.py  screener.py
src/screener_mcp/static/: app.js  index.html  styles.css
src/screener_mcp/tools/: analysis_tools.py  company_tools.py  screening_tools.py
